--- a/src/css/ViewExpense.css
+++ b/src/css/ViewExpense.css
@@ -129,6 +129,9 @@ p {
         padding-left: 2vw;
         padding-right: 2vw;
     }
+    #DraftDelete, #AppealClaim {
+        margin-bottom: 4vh;
+    }
 }
 
 
